# ruma

./: CNAME  Cargo.toml  crates.js  index.html  search-index.js  settings.html  source-files.js
ruma/: Cargo.toml  all.html  derive.Outgoing.html  enum.DeviceKeyAlgorithm.html  enum.EventEncryptionAlgorithm.html  enum.RoomVersionId.html  enum.SigningKeyAlgorithm.html  index.html  macro.device_id.html  macro.device_key_id!.html  macro.device_key_id.html  macro.event_id.html  macro.mxc_uri.html  macro.room_alias_id.html  macro.room_id.html  macro.room_version_id.html  macro.server_key_id!.html  macro.server_key_id.html  macro.server_name.html  macro.server_signing_key_id.html  macro.user_id.html  sidebar-items.js  struct.DeviceId.html  struct.DeviceKeyId.html  struct.EventId.html  struct.KeyId.html  struct.KeyName.html  struct.MilliSecondsSinceUnixEpoch.html  struct.MxcUri.html  struct.RoomAliasId.html  struct.RoomId.html  struct.RoomIdOrAliasId.html  struct.SecondsSinceUnixEpoch.html  struct.ServerName.html  struct.Signatures.html  struct.UserId.html  trait.Outgoing.html  type.DeviceIdBox.html  type.DeviceSignatures.html  type.DeviceSigningKeyId.html  (+5 more)
ruma/api/: enum.AuthScheme.html  enum.SendAccessToken.html  index.html  macro.ruma_api.html  sidebar-items.js  struct.Metadata.html  trait.EndpointError.html  trait.IncomingNonAuthRequest.html  trait.IncomingRequest.html  trait.IncomingResponse.html  trait.OutgoingNonAuthRequest.html  trait.OutgoingRequest.html  trait.OutgoingRequestAppserviceExt.html  trait.OutgoingResponse.html
ruma/authentication/: enum.TokenType.html  index.html
ruma/client/: enum.Error.html  index.html  sidebar-items.js  struct.Client.html  trait.DefaultConstructibleHttpClient.html  trait.HttpClient.html  trait.HttpClientExt.html  type.ResponseError.html  type.ResponseResult.html
ruma/directory/: enum.IncomingRoomNetwork.html  enum.RoomNetwork.html  index.html  struct.Filter.html  struct.IncomingFilter.html  struct.PublicRoomsChunk.html  struct.PublicRoomsChunkInit.html
ruma/encryption/: enum.KeyUsage.html  enum.OneTimeKey.html  index.html  struct.CrossSigningKey.html  struct.DeviceKeys.html  struct.SignedKey.html  struct.UnsignedDeviceInfo.html  type.CrossSigningKeySignatures.html  type.SignedKeySignatures.html
ruma/events/: enum.AnyBasicEvent.html  enum.AnyBasicEventContent.html  enum.AnyEphemeralRoomEvent.html  enum.AnyEphemeralRoomEventContent.html  enum.AnyEvent.html  enum.AnyGlobalAccountDataEvent.html  enum.AnyGlobalAccountDataEventContent.html  enum.AnyInitialStateEvent.html  enum.AnyMessageEvent.html  enum.AnyMessageEventContent.html  enum.AnyPossiblyRedactedMessageEvent.html  enum.AnyPossiblyRedactedStateEvent.html  enum.AnyPossiblyRedactedStrippedStateEvent.html  enum.AnyPossiblyRedactedSyncMessageEvent.html  enum.AnyPossiblyRedactedSyncStateEvent.html  enum.AnyRedactedMessageEvent.html  enum.AnyRedactedMessageEventContent.html  enum.AnyRedactedRoomEvent.html  enum.AnyRedactedStateEvent.html  enum.AnyRedactedStateEventContent.html  enum.AnyRedactedStrippedStateEvent.html  enum.AnyRedactedSyncMessageEvent.html  enum.AnyRedactedSyncRoomEvent.html  enum.AnyRedactedSyncStateEvent.html  enum.AnyRoomAccountDataEvent.html  enum.AnyRoomAccountDataEventContent.html  enum.AnyRoomEvent.html  enum.AnyStateEvent.html  enum.AnyStateEventContent.html  enum.AnyStrippedStateEvent.html  enum.AnySyncEphemeralRoomEvent.html  (+53 more)
ruma_appservice_api/: Cargo.toml  all.html  index.html  struct.Namespace.html  struct.Namespaces.html  struct.Registration.html  struct.RegistrationInit.html
ruma_events/: Cargo.toml  all.html  enum.AnyBasicEvent.html  enum.AnyBasicEventContent.html  enum.AnyEphemeralRoomEvent.html  enum.AnyEphemeralRoomEventContent.html  enum.AnyEvent.html  enum.AnyGlobalAccountDataEvent.html  enum.AnyGlobalAccountDataEventContent.html  enum.AnyInitialStateEvent.html  enum.AnyMessageEvent.html  enum.AnyMessageEventContent.html  enum.AnyPossiblyRedactedMessageEvent.html  enum.AnyPossiblyRedactedStateEvent.html  enum.AnyPossiblyRedactedStrippedStateEvent.html  enum.AnyPossiblyRedactedSyncMessageEvent.html  enum.AnyPossiblyRedactedSyncStateEvent.html  enum.AnyRedactedMessageEvent.html  enum.AnyRedactedMessageEventContent.html  enum.AnyRedactedRoomEvent.html  enum.AnyRedactedStateEvent.html  enum.AnyRedactedStateEventContent.html  enum.AnyRedactedStrippedStateEvent.html  enum.AnyRedactedSyncMessageEvent.html  enum.AnyRedactedSyncRoomEvent.html  enum.AnyRedactedSyncStateEvent.html  enum.AnyRoomAccountDataEvent.html  enum.AnyRoomAccountDataEventContent.html  enum.AnyRoomEvent.html  enum.AnyStateEvent.html  enum.AnyStateEventContent.html  enum.AnyStrippedStateEvent.html  enum.AnySyncEphemeralRoomEvent.html  enum.AnySyncMessageEvent.html  enum.AnySyncRoomEvent.html  enum.AnySyncStateEvent.html  enum.AnyToDeviceEvent.html  enum.AnyToDeviceEventContent.html  enum.EphemeralRoomEventType.html  enum.EventType.html  (+45 more)
ruma_federation_api/: Cargo.toml  all.html  index.html  sidebar-items.js
ruma_identifiers/: Cargo.toml  all.html  enum.DeviceKeyAlgorithm.html  enum.Error.html  enum.EventEncryptionAlgorithm.html  enum.RoomVersionId.html  enum.SigningKeyAlgorithm.html  fn.is_valid_server_name.html  index.html  macro.device_id.html  macro.device_key_id.html  macro.event_id.html  macro.mxc_uri!.html  macro.mxc_uri.html  macro.room_alias_id!.html  macro.room_alias_id.html  macro.room_id.html  macro.room_version_id.html  macro.server_key_id.html  macro.server_name!.html  macro.server_name.html  macro.server_signing_key_id.html  macro.user_id.html  sidebar-items.js  struct.DeviceId.html  struct.DeviceKeyId.html  struct.EventId.html  struct.KeyId.html  struct.KeyName.html  struct.MxcUri.html  struct.RoomAliasId.html  struct.RoomId.html  struct.RoomIdOrAliasId.html  struct.ServerName.html  struct.Signatures.html  struct.UserId.html  type.DeviceIdBox.html  type.DeviceSignatures.html  type.DeviceSigningKeyId.html  type.EntitySignatures.html  (+5 more)
ruma_identity_service_api/: Cargo.toml  all.html  index.html  sidebar-items.js
ruma_push_gateway_api/: Cargo.toml  all.html  index.html
(+4630 files in other folders)
