[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings"]
description = "Serializable types for the events in the Matrix specification."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma/events"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.22.0-alpha.2"
edition = "2018"

[dependencies]
criterion = { version = "0.3.3", optional = true }
js_int = { version = "0.2.0", features = ["serde"] }
ruma_common = { package = "ruma/common", version = "=0.3.0-alpha.1", path = "../ruma_common", registry = "cratespaces" }
ruma_events_macros = { package = "ruma/events_macros", version = "=0.22.0-alpha.2", path = "../ruma_events_macros", registry = "cratespaces" }
ruma_identifiers = { package = "ruma/identifiers", version = "=0.18.0-alpha.1", path = "../ruma_identifiers", registry = "cratespaces" }
ruma_serde = { package = "ruma/serde", version = "0.3.0", path = "../ruma_serde", registry = "cratespaces" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.60", features = ["raw_value"] }

[dev-dependencies]
maplit = "1.0.2"
matches = "0.1.8"
ruma_identifiers = { package = "ruma/identifiers", version = "=0.18.0-alpha.1", path = "../ruma_identifiers", features = ["rand"], registry = "cratespaces" }
trybuild = "1.0.38"

[features]
unstable-exhaustive-types = []
unstable-pre-spec = []
unstable-synapse-quirks = []

[[bench]]
name = "event_deserialize"
harness = false
