[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings"]
description = "Resource identifiers for Matrix."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma/identifiers"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.18.0-alpha.1"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde"]
serde = ["ruma_serde", "serde1"]

[dependencies]
either = { version = "1.6.1", optional = true }
paste = "1.0.4"
rand = { version = "0.8.0", optional = true }
ruma_identifiers_macros = { package = "ruma/identifiers_macros", version = "=0.18.0-alpha.1", path = "../ruma_identifiers_macros", registry = "cratespaces" }
ruma_identifiers_validation = { package = "ruma/identifiers_validation", version = "0.2.0", path = "../ruma_identifiers_validation", default-features = false, registry = "cratespaces" }
ruma_serde = { package = "ruma/serde", version = "0.3.0", path = "../ruma_serde", optional = true, registry = "cratespaces" }
ruma_serde_macros = { package = "ruma/serde_macros", version = "0.3.0", path = "../ruma_serde_macros", registry = "cratespaces" }
# Renamed so we can have a serde feature.
serde1 = { package = "serde", version = "1.0.118", optional = true, features = ["derive"] }

[dev-dependencies]
matches = "0.1.8"
serde_json = "1.0.60"
trybuild = "1.0.38"
